--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#007BFF",
-    "description": "Proyek portfolio yang diubah menjadi Progressive Web App.",
+    "description": "Portfolio Fajar Krisdiantoro Konsep PWA",
     "icons": [
       {
         "src": "assets/images/icons/icon-72x72.png",
